// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hooks-loader Compile lambda 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  default  function $default (...args) {
  return request({
    url: '/api',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"lambda-index\\",
  \\"gateway\\": \\"http\\",
  \\"functionGroup\\": \\"midway-faas-react-demo\\"
}
  })
}

"
`;

exports[`hooks-loader Compile render 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  default  function $default (...args) {
  return request({
    url: '',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"render-index\\",
  \\"gateway\\": \\"http\\",
  \\"functionGroup\\": \\"midway-faas-react-demo\\"
}
  })
}

export  function foo (...args) {
  return request({
    url: '/foo',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"render-index-foo\\",
  \\"gateway\\": \\"http\\",
  \\"functionGroup\\": \\"midway-faas-react-demo\\"
}
  })
}

export  function bar (...args) {
  return request({
    url: '/bar',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"render-index-bar\\",
  \\"gateway\\": \\"http\\",
  \\"functionGroup\\": \\"midway-faas-react-demo\\"
}
  })
}

"
`;
